@@ -1,5 +1,9 @@
 2005-09-23  Crispin Flowerday  <gnome@flowerday.cx>
 
+	* data/epiphany.m4: Really add the file
+
+2005-09-23  Crispin Flowerday  <gnome@flowerday.cx>
+
 	* data/Makefile.am:
 	* data/epiphany.m4:
 	* src/ephy-extensions-manager.c: (free_extension_info),
